navbar,footer,cards

--- a/index.html
+++ b/index.html
@@ -9,19 +9,245 @@
     <link rel="shortcut icon" href="https://assets.ajio.com/static/img/favicon.ico">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js"></script>
+    <style>
+        @font-face {
+            font-family: 'Lora Regular Bold';
+            src: url('https://assets.ajio.com/static/assets/fonts/Lora-Bold--755b0d247421de7700dd580f3c5dc7d3.755b0d247421de7700dd580f3c5dc7d3.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        .bannerExchange {
+            margin-left: 6%;
+            margin-right: 7%;
+            margin-bottom: 10px;
+            margin-top:10px;
+        }
+
+        .bannerExchangeText {
+            margin-left: 16%;
+            font-family: 'Lora Regular Bold';
+            text-transform: uppercase;
+            font-size: 14px;
+            .assured{
+                margin-left:3%;
+            }
+        }
+
+        /* .bannerExchange {
+            margin-left: 16%;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-right: 16%;
+            border: solid;
+            border-color: red;
+        }
+
+        .bannerExchange .hand {
+            margin-left: 25%;
+            border: solid;
+            margin-right: 0%;
+        }
+
+        .bannerExchange .assured {
+            margin-left: 37%;
+            border: solid;
+        }
+
+        .bannerExchange .exchange {
+            margin-left: 1%;
+            margin-right: 0%;
+            padding: 0px;
+            border-right: 0px;
+            border: solid;
+        }
+
+        .bannerExchangeText {
+            text-transform: uppercase;
+            margin-left: 17.5%;
+            margin-bottom: 10px;
+        } */
+    </style>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="header">
-            <div id="navbar">
-                <div id="navbar-left">
-                    <img id="site-logo" src="https://assets.ajio.com/static/img/Ajio-Logo.svg" alt="">
-                </div>
+    <div class="bannerItem">
+        <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-header.jpg"
+            alt="d-onlinestore">
+    </div>
+    <div class="bannerItem">
+        <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-ajiogold.jpg"
+            alt="AjioGold">
+    </div>
+    <div class="cards">
+        <div class="row">
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-trends.jpg"
+                    alt="trends">
             </div>
-        </header>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-indiepicks.jpg"
+                    alt="IndiePicks">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-home.jpg"
+                    alt="home">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-snh.jpg"
+                    alt="snh">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-weddingstore.jpg"
+                    alt="weddingStore">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-sareestore.jpg"
+                    alt="sareeStore">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-watches.jpg"
+                    alt="watches">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-westernwear.jpg"
+                    alt="westernwear">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-accessories.jpg"
+                    alt="accessories">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-beauty.jpg"
+                    alt="beauty">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-intbrands.jpg"
+                    alt="intBrands">
+            </div>
+            <div class="col-3 cardItem">
+                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-DISCOVERONLINESTORES-homegrownbrands.jpg"
+                    alt="homegrownBrands">
+            </div>
+        </div>
+    </div>
+    <div class="ajioLuxeBanner">
+        <img src="https://assets.ajio.com/cms/AJIO/WEB/31012024-D-DiscoverOnlineStores.jpg" alt="AjioLuxeBanner"
+            style="position: relative; width: 100%;">
+    </div>
+    <div class="ajioCares">
+        <img src="https://assets.ajio.com/cms/AJIO/WEB/13102020-D-unisex-ajiocares-strip.jpg" alt="AjioCaresBanner"
+            style="position: relative; width: 100%;">
     </div>
 
+
+    <div class="bannerExchange">
+        <div class="row justify-content-center">
+            <div class="col exchange text-center">
+                <img src="/images/exchange.png" alt="easyExchange">
+            </div>
+            <div class="col hand text-center">
+                <img src="/images/hand.png" alt="handpicked">
+            </div>
+            <div class="col assured text-center">
+                <img src="/images/assured.png" alt="assuredQuality">
+            </div>
+        </div>
+    </div>
+    <div class="bannerExchangeText">
+        <div class="row">
+            <div class="col">
+                <label><strong>
+                    Easy Exchange
+                </strong></label>
+            </div>
+            <div class="col">
+                <label><strong>
+                    100% Handpicked
+                </strong></label>
+            </div>
+            <div class="col assured">
+                <label"><strong>
+                    Assured Quality
+                </strong></label>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container-fluid outer">
+            <div class="inner">
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <a href="" class="innerTitle">Ajio</a>
+                        <a href="">Who We are</a>
+                        <a href="">Join Our Team</a>
+                        <a href="">Terms & Conditions</a>
+                        <a href="">We Respect Your Privacy</a>
+                        <a href="">Fees & Payments</a>
+                        <a href="">Returns & Refunds Policy</a>
+                        <a href="">Promotions Terms & Conditions</a>
+                    </div>
+                    <div class="col">
+                        <a href="" class="innerTitle">Help</a>
+                        <a href="">Track Your Order</a>
+                        <a href="">Frequently Asked Questions</a>
+                        <a href="">Returns</a>
+                        <a href="">Cancellations</a>
+                        <a href="">Payments</a>
+                        <a href="">Customer Care</a>
+                        <a href="">How Do I Redeem My Coupon</a>
+                    </div>
+                    <div class="col">
+                        <a href="" class="innerTitle">Shop by</a>
+                        <a href="">Men</a>
+                        <a href="">Women</a>
+                        <a href="">Kids</a>
+                        <a href="">Indie</a>
+                        <a href="">Stores</a>
+                        <a href="">New Arrivals</a>
+                        <a href="">Brand Directory</a>
+                        <a href="">Home</a>
+                        <a href="">Collections</a>
+                    </div>
+                    <div class="col">
+                        <a href="" class="innerTitle">Follow us</a>
+                        <a href="">Facebook</a>
+                        <a href="">Instagram-AJIOlife</a>
+                        <a href="">Instagram-AJIO LUXE</a>
+                        <a href="">Twitter</a>
+                        <a href="">Pinterest</a>
+                    </div>
+                </div>
+                <br>
+                <hr>
+                <div class="row">
+                    <div class="col-10">
+                        <label class="innerTitle">Payment methods</label>
+                        <br>
+                        <img src="/images/netbankIcon.png" alt="netbankIcon">
+                        <img src="/images/visaIcon.png" alt="visaIcon">
+                        <img src="/images/mastercardIcon.png" alt="mastercardIcon">
+                        <img src="/images/codIcon.png" alt="codIcon">
+                        <img src="/images/jioMoneyIcon.png" alt="jioMoneyIcon">
+                    </div>
+                    <div class="col-2">
+                        <div class="secure">
+                            <label class="innerTitle">Secure systems</label>
+                            <br>
+                            <img src="/images/sslIcon.png" alt="sslIcon">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+            </div>
+    </footer>
+    </div>
 </body>
 
 </html>
