--- a/modules/carousel.html
+++ b/modules/carousel.html
@@ -8,23 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
+<body style="background-color: black;">
     <div class="firstCarousel">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-touch="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-                    aria-label="Slide 5"></button>
-            </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="false">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-15022024-MainBannerDailyChanging-Z1-P1-GFS-4080.gif"
@@ -52,130 +38,50 @@
                 </div>
             </div>
         </div>
-    </div>
-    <br>
-    <div class="secondCarousel">
-        <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel" data-bs-touch="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="3"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="4"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="5"
-                    aria-label="Slide 5"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/1440X128%20(1)111.png"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/1440x128%20DESKTOP.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/1440x128-flash.co.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/Federal%20Bank-1440x128%201a.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/Mobikwik-1440x128%202-.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/1440X128%20Prime%20(1)111.png"
-                        class="d-block w-100" alt="...">
-                </div>
-            </div>
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
         </div>
     </div>
-    <br>
-    <div class="bannerItem">
-        <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-TopBannerCarousel-header.jpg"
-            alt="d-onlinestore">
-    </div>
-    <div class="thirdCarousel">
-        <div id="carouselExampleIndicators3" class="carousel slide" data-bs-ride="carousel" data-bs-touch="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="3"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="4"
-                    aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21022024-TopBrandBanner-Z3-P4-Gant-Min50.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21022024-TopBrandBanner-Z3-P2-MARKSNSPENCER-HUNKEMOLLER-min40.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21022024-TopBrandBanner-Z3-P3-TIG-BritishClub-min50.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-11022024-MainBannerDailyChanging-Z1-P5-avaasa-dnmx-min50o.jpg" class="d-block w-100"
-                        alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21022024-TopBrandBanner-Z3-P5-Action-RedChief-flat50.jpg" class="d-block w-100"
-                        alt="...">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="fourthCarousel bannerItem">
-        <div id="carouselExampleIndicators4" class="carousel slide" data-bs-ride="carousel" data-bs-touch="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="3"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="4"
-                    aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21224-DailyBanner-Z5-P1-M&S-Snitch-UPTO50.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21224-DailyBanner-Z5-P2-glamroots-kimayra-min50.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21224-DailyBanner-Z5-P3-Arrow-Vanheusen-Upto40-min.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21224-DailyBanner-Z5-P5-Adidas-Crocs-MIN30.png"
-                        class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-21224-DailyBanner-Z5-P5-JP-NETPLAY-FLAT60.jpg"
-                        class="d-block w-100" alt="...">
-                </div>
-            </div>
-        </div>
-    </div>
+    <style>
+        .carousel-indicators{
+            border:solid;
+            border-color: red;
+            margin:0;
+            padding:0;
+            margin-bottom: 175px;
+            button{
+                width:50px !important;
+                height:5px !important;
+            }
+        }
+        
+    </style>
+    <script>
+        var indicators = document.querySelectorAll('.carousel-indicators button');
+        var carousel = new bootstrap.Carousel(document.querySelector('#carouselExampleIndicators'), {
+            interval: 3000,
+            pause: false
+        });
+
+        indicators.forEach(function (indicator, index) {
+            indicator.addEventListener('click', function () {
+                carousel.to(index);
+            });
+        });
+    </script>
+
+    
 </body>
 
 </html>
