--- a/try2/index.html
+++ b/try2/index.html
@@ -44,7 +44,6 @@
             </div>
         </div>
     </div>
-    <hr>
     <div class="firstCarousel">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-touch="false">
             <div class="carousel-indicators">
@@ -223,12 +222,12 @@
         <!-- Buttons container outside of overall -->
         <div class="sideButton">
             <div class="leftCardButton">
-                <button class="btn btn-light left" onclick="scrollImages(-1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light left" id="dotsLBtn" onclick="scrollImages(-1)"><span class="material-symbols-outlined">
                         arrow_back_ios
                     </span></button>
             </div>
             <div class="rightCardButton">
-                <button class="btn btn-light right" onclick="scrollImages(1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light right" id="dotsRBtn" onclick="scrollImages(1)"><span class="material-symbols-outlined">
                         arrow_forward_ios
                     </span></button>
             </div>
@@ -318,12 +317,14 @@
         <!-- Buttons container outside of overall -->
         <div class="sideButton">
             <div class="leftCardButton">
-                <button class="btn btn-light left" onclick="scrollImages(-1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light left" id="wideBannerLeftBtn" onclick="scrollImages(-1)"><span
+                        class="material-symbols-outlined">
                         arrow_back_ios
                     </span></button>
             </div>
             <div class="rightCardButton">
-                <button class="btn btn-light right" onclick="scrollImages(1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light right" id="wideBannerRightBtn" onclick="scrollImages(1)"><span
+                        class="material-symbols-outlined">
                         arrow_forward_ios
                     </span></button>
             </div>
@@ -359,10 +360,12 @@
                 <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-AJIOEXCLUSIVES-gas-3060.jpg">
             </div>
             <div class="cardItem cardBannerItem">
-                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-AJIOEXCLUSIVES-johnplayers-leecooper-4070.jpg">
+                <img
+                    src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-AJIOEXCLUSIVES-johnplayers-leecooper-4070.jpg">
             </div>
             <div class="cardItem cardBannerItem">
-                <img src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-AJIOEXCLUSIVES-fusion-starting249.jpg">
+                <img
+                    src="https://assets.ajio.com/cms/AJIO/WEB/D-1.0-UHP-01022024-AJIOEXCLUSIVES-fusion-starting249.jpg">
             </div>
         </div>
 
@@ -370,12 +373,13 @@
         <!-- Buttons container outside of overall -->
         <div class="sideButton">
             <div class="leftCardButton">
-                <button class="btn btn-light left" onclick="scrollImages(-1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light left" id="ajioExLBtn" onclick="scrollImages(-1)"><span class="material-symbols-outlined">
                         arrow_back_ios
                     </span></button>
             </div>
             <div class="rightCardButton">
-                <button class="btn btn-light right" onclick="scrollImages(1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light right" id="ajioExRBtn" onclick="scrollImages(1)"><span
+                        class="material-symbols-outlined">
                         arrow_forward_ios
                     </span></button>
             </div>
@@ -424,12 +428,14 @@
         <!-- Buttons container outside of overall -->
         <div class="sideButton">
             <div class="leftCardButton">
-                <button class="btn btn-light left" onclick="scrollImages(-1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light left" id="ssbLBtn" onclick="scrollImages(-1)"><span
+                        class="material-symbols-outlined">
                         arrow_back_ios
                     </span></button>
             </div>
             <div class="rightCardButton">
-                <button class="btn btn-light right" onclick="scrollImages(1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light right" id="ssbRBtn" onclick="scrollImages(1)"><span
+                        class="material-symbols-outlined">
                         arrow_forward_ios
                     </span></button>
             </div>
@@ -485,12 +491,14 @@
         <!-- Buttons container outside of overall -->
         <div class="sideButton">
             <div class="leftCardButton">
-                <button class="btn btn-light left" onclick="scrollImages(-1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light left" id="mhcLBtn" onclick="scrollImages(-1)"><span
+                        class="material-symbols-outlined">
                         arrow_back_ios
                     </span></button>
             </div>
             <div class="rightCardButton">
-                <button class="btn btn-light right" onclick="scrollImages(1)"><span class="material-symbols-outlined">
+                <button class="btn btn-light right" id="mhcRBtn" onclick="scrollImages(1)"><span
+                        class="material-symbols-outlined">
                         arrow_forward_ios
                     </span></button>
             </div>
