--- a/try2/index.html
+++ b/try2/index.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>CLONE|Online Shopping for Women, Men, Kids – Clothing, Footwear | AJIO</title>
     <link rel="shortcut icon" href="https://assets.ajio.com/static/img/favicon.ico">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
